Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ a {
 
 .import {
     width: fit-content;
-    margin: 2rem auto;
+    margin: 0 auto;
     padding: 1rem;
     font-family: monospace;
     background-color: #222;
